# ai-iris-classification-scikit-learn

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  dvc.yaml  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
mlruns/0/: meta.yaml
notebooks/: iris_classification.ipynb
scripts/: setup-repo.sh
src/: config.py  evaluate.py  model.py  prepare_data.py  train.py
tests/: test_example.py
