[project]
name = "ai-iris-classification-scikit-learn"
version = "0.1.0"
description = ""
authors = [
    {name = "reinhud",email = "lrdev+github@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "dvc (>=3.60.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
